# revenue_prediction

./: AIRFLOW_SETUP.md  README.md  apple_historical_financials.csv  data_ingest.py  pyproject.toml  requirements-airflow.txt  update_dashboard.py
dags/: revenue_prediction_dag.py
src/forecast_pipeline/: data_ingest.py  retrain_model.py  update_dashboard.py
