[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast_revenue"
version = "0.1.0"
authors = [
    { name="Kumar Shubham", email="rekhakshubham@gmail.com" }
]
description = "A custom time-series financial forecasting library using SEC data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: ",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "requests",
    "numpy",
    "statsmodels"
]
